# Infix_Engine_1

./: CMakeLists.txt
Infix_Engine/: CMakeLists.txt  main.cpp  prerequisites.h
Infix_Engine/3D-Graphics/Camera/: Camera.h
Infix_Engine/3D-Graphics/DrawWindow/: DrawWindow.h
Infix_Engine/3D-Graphics/Shaders/: Fragment.glsl  PostFrag.glsl  Shaders.h  Vertex.glsl  bugged_shaders.txt
Infix_Engine/Assets/AssetsHandler/: FileHandeler.h
Infix_Engine/Assets/AssetsHandler/TextureHandeler/: TextureLoader1D.h  TextureLoader2D.h  TextureLoader3D.h  VOX-Discription.txt
Infix_Engine/Assets/VoxelObjects/: 2d.xraw  2x2x2.xraw  Church_Of_St_Sophia-0.xraw  b_and_w.xraw  boxes.xraw  building2.xraw  bulding1flip.xraw  chr_knight.xraw  chr_sword.xraw  full_palette.xraw  garrick.xraw  inf_box.xraw  land.xraw  long.xraw  monu9.xraw  pal.xraw  perlin.xraw  teapot.xraw  teapot_new.xraw
Infix_Engine/GUI/: DebugGui.h  output.h
Infix_Engine/InputDevices/: InputDevices.h
Infix_Engine/VoxelPhysics/: VoxelPhysics.h
Infix_Engine/includes/GLAD/: CMakeLists.txt
Infix_Engine/includes/GLAD/include/glad/: glad.h
Infix_Engine/includes/GLAD/src/: glad.c
